@@ -34,6 +34,11 @@ jobs:
           - target: x86_64-pc-windows-msvc
             os: windows-2022
     steps:
+      - name: Set Git to use LF
+        if: matrix.os == 'windows-2022'
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Setup Rust toolchain
