@@ -1,0 +1,1 @@
+See `rscrypt(1)` for more details.
