@@ -1,0 +1,1 @@
+See `rscrypt-dec(1)` for more details.
