@@ -1,0 +1,1 @@
+See `rscrypt-enc(1)` for more details.
