@@ -1,0 +1,3 @@
+SPDX-FileCopyrightText: 2023 Shun Sakai
+
+SPDX-License-Identifier: GPL-3.0-or-later
