@@ -1,0 +1,3 @@
+The result will be write to stdout.
+
+See `rscrypt-info(1)` for more details.
