@@ -1,0 +1,9 @@
+Copyright (C) 2022-2023 Shun Sakai
+
+This program is distributed under the terms of the GNU General Public License
+v3.0 or later.
+
+This is free software: you are free to change and redistribute it. There is NO
+WARRANTY, to the extent permitted by law.
+
+Report bugs to <https://github.com/sorairolake/rscrypt/issues>.
