@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.7.2\...HEAD[Unreleased]
+
+=== Changed
+
+* Change `--help` and `--version` to print additional information
+  ({pull-request-url}/346[#346])
+
 == {compare-url}/v0.7.1\...v0.7.2[0.7.2] - 2023-12-03
 
 === Changed
